--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -208,7 +208,7 @@
 
                 $("#search").unbind("click");
                 $("#search").on("click", function (e) {
-                    showInfo(url, tableName, rTableId, status);
+                    showApplyHistoryInfo(url, tableName, rTableId, status);
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
