--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -18,12 +18,12 @@
         <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
             <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
-                   placeholder="申请日期..."/>
+                   placeholder="办理时间..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
             <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
-                   placeholder="申请日期..."/>
+                   placeholder="办理时间..."/>
             <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
