--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -37,14 +37,12 @@
         <div class="col-xs-7">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
+            <input class="date" id="date-from" type="hidden" style="width: 186px" onclick="showTime()"
                    placeholder="申请日期..."/>
-            <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
+            <input class="date" id="date-to" type="hidden" style="width: 186px" onclick="showTime()"
                    placeholder="申请日期..."/>
-            <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
             <input id="approve-user" type="text" placeholder="申请人..." style="width: 100px"/>
