--- a/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
@@ -17,6 +17,34 @@
     <div style="text-align: center" class="col-xs-32">
         <h3 class="header smaller lighter blue" style="margin-left: auto;margin-right: auto;">日常费用报销单</h3>
     </div>
+    
+<div class="row">
+    <div class="col-sm-12">
+    	<span style="float:left;margin-top:20px;margin-bottom:10px; margin-right:1%;">
+        	<button class="btn btn-info" type="button" onclick="history.back();;">
+               	 返回
+            </button>
+            <button class="btn btn-info" type="button"
+                    onclick="subTableInfos(false, false);">
+               	 保存
+            </button>
+    	</span>
+        <span style="float:right;margin-top:20px;margin-bottom:10px; margin-right:1%;">
+            <button class="btn btn-info" type="button"
+                    onclick="subTableInfos(false, true);">
+               	 保存并通过
+            </button>
+            <button class="btn btn-info" type="button"
+                    onclick="approveReject();">
+               	 拒绝
+            </button>
+            <button class="btn btn-info" type="button"
+                    onclick="approveEndorse();">
+               	 加签
+            </button>
+        </span>
+    </div>
+</div>
     <div class="row">
         <div class="col-sm-12">
             <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span
@@ -350,33 +378,7 @@
 	        </div>
 	    </div>
 </div>
-<div class="row">
-    <div class="col-sm-12">
-    	<span style="float:left;margin-top:20px;margin-bottom:10px; margin-right:1%;">
-        	<button class="btn btn-info" type="button" onclick="history.back();;">
-               	 返回
-            </button>
-            <button class="btn btn-info" type="button"
-                    onclick="subTableInfos(false, false);">
-               	 保存
-            </button>
-    	</span>
-        <span style="float:right;margin-top:20px;margin-bottom:10px; margin-right:1%;">
-            <button class="btn btn-info" type="button"
-                    onclick="subTableInfos(false, true);">
-               	 保存并通过
-            </button>
-            <button class="btn btn-info" type="button"
-                    onclick="approveReject();">
-               	 拒绝
-            </button>
-            <button class="btn btn-info" type="button"
-                    onclick="approveEndorse();">
-               	 加签
-            </button>
-        </span>
-    </div>
-</div>
+
 
 <div id="dialog-confirm" class="hide">
     <form class="form-horizontal">
@@ -616,7 +618,7 @@
             sum += innerSum;
         }
         $("#ratify").val(sum.toFixed(2));
-        
+        $("#payAmount").val(sum.toFixed(2));
         if(errorInfo != ""){
 			alert(errorInfo);
 	        return false;
