--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -34,6 +34,7 @@
                 </button>
             </div>
         </div>
+        <form action="oa/approve_todo_export" method="post">
         <div class="col-xs-7">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
@@ -45,15 +46,20 @@
                    placeholder="申请日期..."/>
         </span>
         <span class="input-icon input-icon-right">
-            <input id="approve-user" type="text" placeholder="申请人..." style="width: 100px"/>
+            <input id="approve-user" name="approve-user" type="text" placeholder="申请人..." style="width: 100px"/>
         </span>
-                <button id="search"
+                <input type="button" id="search" value="查询"
                         style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
                         class="btn btn-minier btn-primary">
-                    查询
-                </button>
+                <input type="submit" id="export"
+                        style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary" value="导出">
+                <input type="button" id="import" value="批量查询"
+                        style="width: 80px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary">
             </div>
         </div>
+        </form>
     </div>
     <div class="col-xs-12">
         <div class="col-xs-9">
@@ -116,10 +122,10 @@
 
     jQuery(function ($) {
         window.edit_form = $("#edit-form").html();
-        showApproveTableInfo("oa/approve_todo");
+        showApproveTableInfo("oa/approve_todo", null);
     });
 
-    function showApproveTableInfo(url) {
+    function showApproveTableInfo(url, fids) {
         var ex = document.getElementById("approve_todo");
         if ($.fn.dataTable.fnIsDataTable(ex)) {
             $(ex).dataTable().fnDestroy();
@@ -131,10 +137,10 @@
                 "bSortable": false, "sClass": "center"
             },
             {"sTitle": 'ID', "sClass": "center", "sWidth": 100},
-            {"sTitle": '申请人', "sClass": "center", "sWidth": 200},
-            {"sTitle": '申请部门', "sWidth": 300, "sClass": "center"},
-            {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
             {"sTitle": '金额', "sClass": "center", "sWidth": 150},
+            {"sTitle": '发起人', "sClass": "center", "sWidth": 200},
+            {"sTitle": '发起时间', "sClass": "center", "sWidth": 200},
+            {"sTitle": '接收时间', "sClass": "center", "sWidth": 200},
             {"sTitle": "报销详情", "sClass": "center", "sWidth": 150}];
 
         var wh = $(window).height();
@@ -170,6 +176,9 @@
                 var vars = {};
                 vars["start"] = start;
                 vars["length"] = length;
+                if(fids != null){
+                	vars["fids"] = fids;
+                }
                 if (startDate != '') {
                     vars["startTime"] = startDate;
                 }
@@ -217,13 +226,19 @@
 
                 $("#search").unbind("click");
                 $("#search").on("click", function (e) {
-                    showApproveTableInfo(url);
+                    showApproveTableInfo(url, null);
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
                 $("#approve_pass").unbind("click");
                 $("#approve_pass").on("click", function (e) {
                     approvePass(oTable);
+                }).on("dblclick", function (e) {
+                    e.preventDefault();
+                });
+                $("#import").unbind("click");
+                $("#import").on("click", function (e) {
+                	showUploadDialog();
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
@@ -574,7 +589,7 @@
                         $("#approve-result-dialog").dialog('destroy');
                     }
                 });
-                showApproveTableInfo("oa/approve_todo");
+                showApproveTableInfo("oa/approve_todo", null);
             },
             "error": function (jqxhr, textstatus, errorthrown) {
                 enableCurrentApproveToolbarButton(true);
@@ -683,7 +698,7 @@
             	"onclick='edit(%s, %s);'><i class='icon-link'></i></a>", needData[i][0], needData[i][5]);
             	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" disabled> <span class="lbl"></span></label>';
             }
-            var need_list = [checkbox, needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map];
+            var need_list = [checkbox, needData[i][0], money.toFixed(2), needData[i][1], needData[i][3], needData[i][10], map];
             var d_list = [];
             for(j = 0; j < len; j++){
                 d_list.push(need_list[j]);
@@ -744,5 +759,71 @@
             }
         })
     }
+    
 
+	function showUploadDialog() {
+	    var form = '<div style="padding: 10px 0px">'
+	        + '<form id="upload_configure_form">'
+	        + '<input type="file" name="file"/>'
+	        + '</form>'
+	        + $.parseStr(
+	            '<div id="upload_configure_msg" style="%s"></div>',
+	            'width: 100%; line-height: 18px; font-size: 14px; font-weight: bold; padding: 15px 5px 5px 5px'
+	        );
+	    $("#approve-msg-dialog").html(form);
+	    title_html_str = '<div class="dialog_title">批量导入机器</div>'
+	    var dialog = $("#approve-msg-dialog").removeClass('hide').dialog({
+	        modal: true,
+	        width: 450,
+	        resizable: false,
+	        title: title_html_str,
+	        title_html: true,
+	        buttons: [
+	            {
+	                text: "确认上传",
+	                "class": "btn btn-danger btn-xs",
+	                click: function () {
+	                    $("#upload_configure_msg").html('<div style="color: blue"><p>正在上传，请稍后......</p></div>');
+	                    var formData = new FormData();
+	                    formData.append('file', $('#upload_configure_form input[name=file]').get(0).files[0]);
+	                    $.ajax({
+	                        url: 'oa/parse_xls',
+	                        contentType: false,
+	                        data: formData,
+	                        processData: false,
+	                        type: 'POST',
+	                        success: function (resp) {
+	                            var data = resp || {};
+	                            if (data.errorCode == 0) {
+	                            	$("#approve-msg-dialog").dialog("close");
+	                            	showApproveTableInfo("oa/approve_todo", data.data);
+	                            }else{
+	                            	var msg_dom = '<div style="color: red">'
+	                                        + $.parseStr('<p>%s</p>', data.errorMessage || '')
+	                                        + '</div>';
+	                                    $("#upload_configure_msg").html(msg_dom);
+	                            }
+	                        },
+	                        error: function () {
+	                            $("#upload_configure_msg").html('<div style="color: red"><p>网络错误</p></div>');
+	                        }
+	                    });
+	
+	                }
+	            },
+	            {
+	                text: "取消",
+	                "class": "btn btn-xs",
+	                click: function () {
+	                    $("#approve-msg-dialog").dialog("close");
+	                }
+	            }
+	        ],
+	        close: function () {
+	            $("#approve-msg-dialog").empty()
+	            $("#approve-msg-dialog").dialog('destroy')
+	        }
+	    });
+	
+	}
 </script>
