--- a/src/main/webapp/WEB-INF/vm/oa/delegation.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/delegation.vm
@@ -23,7 +23,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
             	<tr style="height:50px">
                     <td style="text-align:left">
-                    	<h4>代理人:</h4>
+                    	<h4>代理人（请输入RTX ID）:</h4>
                     </td>
                     
                 </tr>
