--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -74,6 +74,17 @@
         <div class="col-sm-12">
             <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span
                     style="font-size:18px">出租车费明细(含汽车燃油费)</span></div>
+            <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: left;">
+            <span class="input-icon input-icon-right">
+            <input class="date" id="auto-file-date-from-table1" type="text" style="width: 186px" onclick="showTime()" placeholder="开始日期..."/>
+            <i class="icon-calendar green"></i>
+        	</span>
+            <span class="input-icon input-icon-right">
+            <input class="date" id="auto-file-date-to-table1" type="text" style="width: 186px" onclick="showTime()" placeholder="结束日期..."/>
+            <i class="icon-calendar green"></i>
+        	</span>
+            <button onclick="autoFill('table1')">自动填写</button>
+            </div>
             <table frame="vsides" class="col-xs-12"
                    id="table1">
                 <tr>
@@ -146,6 +157,17 @@
         <div class="col-sm-12">
             <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span
                     style="font-size:18px">餐费明细(每人每餐报销不超过50元)</span></div>
+            <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: left;">
+            <span class="input-icon input-icon-right">
+            <input class="date" id="auto-file-date-from-table2" type="text" style="width: 186px" onclick="showTime()" placeholder="开始日期..."/>
+            <i class="icon-calendar green"></i>
+        	</span>
+            <span class="input-icon input-icon-right">
+            <input class="date" id="auto-file-date-to-table2" type="text" style="width: 186px" onclick="showTime()" placeholder="结束日期..."/>
+            <i class="icon-calendar green"></i>
+        	</span>
+            <button onclick="autoFill('table2')">自动填写</button>
+            </div>
             <table frame="vsides" class="col-xs-12"
                    id="table2">
                 <tr>
@@ -598,14 +620,31 @@
             }
         });
     }
-    function addRow(tableId) { //读取最后一行的行号，存放在txtTRLastIndex文本框中
+    function addRow(tableId, day, hour) { //读取最后一行的行号，存放在txtTRLastIndex文本框中
         var table = document.getElementById(tableId);
         var rowLen = table.rows.length;
         var coLen = table.rows[0].cells.length;
         var nRow = table.insertRow(rowLen);
         for (var i = 0; i < coLen - 2; i++) {
             var cell = nRow.insertCell(i);
-            cell.innerHTML = table.rows[rowLen - 1].cells[i].innerHTML;
+           	cell.innerHTML = table.rows[rowLen - 1].cells[i].innerHTML;
+            var flag = false;
+	        if(tableId == 'table1'){
+		       	if(day != null && i == 0){
+		       		cell.childNodes[0].childNodes[1].value = day;
+		       	}
+				if(hour != null && i == 6){
+		       		cell.childNodes[0].value = hour
+				}
+	        }
+	        if(tableId == 'table2'){
+		       	if(day != null && i == 0){
+		       		cell.childNodes[0].childNodes[1].value = day;
+		       	}
+				if(hour != null && i == 7){
+					cell.childNodes[0].value = hour
+				}
+	        }
         }
         var cell = nRow.insertCell(coLen - 2);
         cell.innerHTML = "<input type='hidden' value=''>";
@@ -721,12 +760,6 @@
     }
 
     function subTableInfos(flag) {
-    	//addMoney("table1");
-    	//addMoney("table2");
-    	//addMoney("table3");
-    	//addMoney("table4");
-    	//addMoney("table5");
-    	//addMoney("table6");
         var params = {};
         var vars = {};
         if(formId != null && formId != ""){
@@ -955,5 +988,75 @@
         form += '</div>';
         form += '</form>';
         return form;
+    }
+    
+    function autoFill(tableId){
+    	var start = $("#auto-file-date-from-"+tableId).val();
+    	var end = $("#auto-file-date-to-"+tableId).val();
+    	if(start=='' || end==''){
+    		showCommonNoticeDialog('错误', 'icon-warning-sign', generateNoticeMsg('请填写开始时间和结束时间!'), 300);
+    		return false;
+    	}
+    	if(end < start){
+    		showCommonNoticeDialog('错误', 'icon-warning-sign', generateNoticeMsg('结束时间不能小于开始时间!'), 300);
+    		return false;
+    	}
+        var params = {
+            "vars": {
+                "start": start,
+                "end": end,
+            }
+        };
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            url: "oa/batch_labor",
+            type: "POST",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                console.log(resp);
+                if (resp.errorCode == 0) {
+                    var data = resp.data;
+                    if(data.length > 0){
+                    	var table = document.getElementById(tableId);
+        				var rowLen = table.rows.length;
+        				if(rowLen == 2){
+        					info = data[0];
+		                    vals = info.split(":");
+		                    day = vals[0];
+		                    hour = vals[1];
+		                    if(tableId == "table1"){
+        						//table.rows[1].cells[0].innerHTML = '<span class="input-icon input-icon-right"><input type="text" value="'+day+'" onclick="showTimeAndLabor(\'table1\', this)"/><i class="icon-calendar green"></i></span>';
+								//table.rows[1].cells[6].innerHTML = '<td><input type="text" disabled="disabled" value="'+hour+'"></td>';
+								table.rows[1].cells[0].childNodes[0].childNodes[1].value = day;
+								table.rows[1].cells[6].childNodes[0].value = hour
+        					}
+        					if(tableId == "table2"){
+        						//table.rows[1].cells[0].innerHTML = '<span class="input-icon input-icon-right"><input type="text" value="'+day+'" onclick="showTimeAndLabor(\'table2\', this)"/><i class="icon-calendar green"></i></span>';
+								//table.rows[1].cells[6].innerHTML = '<td><input type="text" disabled="disabled" value="'+hour+'"></td>';
+								table.rows[1].cells[0].childNodes[0].childNodes[1].value = day;
+								table.rows[1].cells[7].childNodes[0].value = hour
+        					}
+        					for(var i=1; i<data.length; i++){
+		                    	info = data[i];
+		                    	vals = info.split(":");
+		    					addRow(tableId, vals[0], vals[1]);
+		                    }
+        				}else{
+		                    for(var i=0; i<data.length; i++){
+		                    	info = data[i];
+		                    	vals = info.split(":");
+		    					addRow(tableId, vals[0], vals[1]);
+		                    }
+	                    }
+                    }
+                } else {
+                    showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg(resp.errorMessage), 300);
+                }
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        });
+    	
     }
 </script>
