--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -63,6 +63,12 @@
             </table>
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
                 <tr>
+                    <td>冲销借款总计</td>
+                    <td><input type="text" value="0.00" id="borrowAmount" readonly="readonly"></td>
+                </tr>
+            </table>
+            <table style="border-collapse:collapse;" border="1" class="col-xs-12">
+                <tr>
                     <td>&nbsp;&nbsp;支付金额&nbsp;&nbsp;</td>
                     <td><input type="text" value="0.00" id="payAmount" readonly="readonly"></td>
                 </tr>
@@ -71,6 +77,27 @@
 
     </div>
     <div class="row">
+        <div class="col-sm-12">
+            <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span style="font-size:18px">冲销借款</span></div>
+            <table style="border-collapse:collapse;" border="1" class="col-xs-12" id="table7">
+                <tr>
+                    <td bgcolor="#96E0E2">借款编号</td>
+                    <td bgcolor="#96E0E2">借款日期</td>
+                    <td bgcolor="#96E0E2">借款金额</td>
+                    <td bgcolor="#96E0E2">借款余额</td>
+                    <td bgcolor="#96E0E2">冲销金额</td>
+                </tr>
+                #foreach($loan in $loans)
+                <tr>
+                    <td><input type="hidden" value="$loan[0]">$loan[0]</td>
+                    <td><input type="hidden" value="$loan[1]">$loan[1]</td>
+                    <td><input type="hidden" value="$loan[2]">$loan[2]</td>
+                    <td><input type="hidden" value="$loan[3]">$loan[3]</td>
+                    <td><input id="loan_$loan[0]" type="text" value="" onblur="addBorrowAmount(this.value)"></td>
+                </tr>
+				#end
+            </table>
+        </div>
         <div class="col-sm-12">
             <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span
                     style="font-size:18px">出租车费明细(含汽车燃油费)</span></div>
@@ -346,26 +373,6 @@
             </table>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"><span style="font-size:18px">冲销借款</span></div>
-            <table frame="vsides" class="col-xs-12" id="table7">
-                <tr>
-                    <td bgcolor="#96E0E2" width="10%"></td>
-                    <td bgcolor="#96E0E2">借款编号</td>
-                    <td bgcolor="#96E0E2">借款金额</td>
-                </tr>
-                #foreach($loan in $loans)
-                <tr>
-                    <td><input type="checkbox" id="loan_$loan[1]" value="$loan[0]"></td>
-                    <td>$loan[1]</td>
-                    <td>$loan[2]</td>
-                </tr>
-				#end
-            </table>
-            <div class="col-xs-12" style="border:solid 1px; background-color: #f0f0f0;text-align: center;"></div>
-        </div>
-    </div>
 
 </div>
 <div class="row">
@@ -556,17 +563,8 @@
 		var tableInfo = tableMap["table7"];
 		var tableLen = tableInfo.length;
 		for (var j = 0; j < tableLen; j++) {
-			$("#loan_"+tableInfo[j]).prop('checked', true);
-			$("#loan_"+tableInfo[j]).attr('checked', true);
+			$("#loan_"+tableInfo[j][0]).val(tableInfo[j][4]);
 		}
-			
-		/*	
-		$("input:checked", document.getElementById("table7")).each(function () {
-            var val = $(this).val();
-            list[0][idx] = val;
-            idx++;
-        });
-        */
     }
     function getDataToEditDialog(tableMap, vars) {
 
@@ -585,6 +583,7 @@
         $("#ratify").val(vars["ratify"]);
         $("#remark").val(vars["remark"]);
 		$("#payAmount").val(vars["payAmount"]);
+		$("#borrowAmount").val(vars["borrowAmount"]);
     }
 
     function workHour(tableId, curRow) {
@@ -669,6 +668,28 @@
         table.deleteRow(rowId);
         addMoney(tableId);
     }
+    
+	function addBorrowAmount(innerSum) {
+		if (isNull(innerSum)) {
+			innerSum = 0;
+		} else if (!(/^(([1-9]\d*)|\d)(\.\d{1,2})?$/).test(innerSum)) {
+			showCommonNoticeDialog('错误', 'icon-warning-sign', generateNoticeMsg("冲销金额格式错误"), 300);
+			innerSum = 0;
+			return false;
+		}
+        table = document.getElementById("table7");
+        var rowLen = table.rows.length;
+        borrowAmount = 0;
+        for (i = 1; i < rowLen; i++) {
+            var price = table.rows[i].cells[4].childNodes[0].value;
+            if(isNull(price)) price = 0;
+            borrowAmount += parseFloat(price);
+        }
+        $("#borrowAmount").val(borrowAmount.toFixed(2));
+        
+        var payAmount = parseFloat($("#sum").val()) - borrowAmount;
+        $("#payAmount").val(payAmount.toFixed(2));
+    }
 
     function addMoney(tableId) {
         var tableList = ["table1", "table2", "table3", "table4", "table5", "table6"];
@@ -740,9 +761,11 @@
             sum += innerSum;
         }
         $("#sum").val(sum.toFixed(2));
-        
+        var payAmount = sum - parseFloat($("#borrowAmount").val());
+        $("#payAmount").val(payAmount.toFixed(2));
         if(errorInfo != ""){
-			alert(errorInfo);
+			showCommonNoticeDialog('错误', 'icon-warning-sign',
+                            generateNoticeMsg(errorInfo), 300);
 	        return false;
         }
     }
@@ -775,6 +798,7 @@
         vars["sum"] = $("#sum").val();
         vars["ratify"] = $("#ratify").val();
         vars["remark"] = $("#remark").val();
+        vars["payAmount"] = $("#payAmount").val();
         var tableMap = {};
         var tableList = ["table1", "table2", "table3", "table4", "table5"];
         var len = tableList.length;
@@ -828,16 +852,35 @@
         tableMap["table"] = list;
         
         //table 借款信息
-        var idx = 0;
+        table = document.getElementById("table7");
         list = new Array();
         list[0] = new Array();
-        $("input:checked", document.getElementById("table7")).each(function () {
-            var val = $(this).val();
-            list[0][idx] = val;
-            idx++;
-        });
+        var rowLen = table.rows.length;
+        k = 0;
+        priceSum = 0;
+        for (i = 1; i < rowLen; i++) {
+            var billNo = table.rows[i].cells[0].childNodes[0].value;
+            var invoiceDate = table.rows[i].cells[1].childNodes[0].value;
+            var amount = table.rows[i].cells[2].childNodes[0].value;
+            var borrowBillBalance = table.rows[i].cells[3].childNodes[0].value;
+            var price = table.rows[i].cells[4].childNodes[0].value;
+            if(price == "") price = "0.00";
+            if (!(/^(([1-9]\d*)|\d)(\.\d{1,2})?$/).test(price)) {
+				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额格式错误"), 300);
+				return false;
+			}
+			borrowBillBalance = parseFloat(borrowBillBalance);
+			price = parseFloat(price);
+			priceSum += price;
+			if (price > borrowBillBalance) {
+				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额不能大于借款余额"), 300);
+				return false;
+			}
+            list[0][k] = billNo+","+invoiceDate+","+amount+","+borrowBillBalance+","+price;
+            k++;
+        }
         tableMap["table7"] = list;
-
+        
         params["vars"] = vars;
         params["tableMap"] = tableMap;
         params["flag"] = flag;
