--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -38,12 +38,12 @@
         <div class="col-xs-7">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-from" type="text" style="width: 100px" onclick="showTime()"
+            <input name="startTime" class="date" id="date-from" type="text" style="width: 100px" onclick="showTime()"
                    placeholder="发起时间..."/>
                    <i class="icon-calendar green"></i>
         </span>
         <span class="input-icon input-icon-right">
-            <input class="date" id="date-to" type="text" style="width: 100px" onclick="showTime()"
+            <input name="endTime" class="date" id="date-to" type="text" style="width: 100px" onclick="showTime()"
                    placeholder="发起时间..."/>
                    <i class="icon-calendar green"></i>
         </span>
