--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -169,6 +169,11 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="javascript:void(0);" onclick="window.location.href='mailto:nuby.zhang@qunar.com?subject=【吐槽】【日常报销】'">
+                    <span class="menu-text"> <b>我要吐槽</b> </span>
+                </a>
+            </li>
         </ul>
     </div>
     <div class="main-content">
