--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -117,6 +117,11 @@
                 </a>
             </li>
             <li>
+                <a href="oa/search.html">
+                    <span class="menu-text"> 综合查询 </span>
+                </a>
+            </li>
+            <li>
                 <a href="javascript:void(0);">
                     <span class="menu-text"> 我的申请 </span>
                 </a>
